Big GameObject refactor.