@@ -3,25 +3,27 @@ package Core2D.AssetManager;
 import Core2D.Audio.AudioInfo;
 import Core2D.Core2D.Core2D;
 import Core2D.Core2D.Core2DMode;
+import Core2D.DataClasses.AudioData;
 import Core2D.DataClasses.Data;
 import Core2D.DataClasses.ShaderData;
 import Core2D.DataClasses.Texture2DData;
 import Core2D.Log.Log;
 import Core2D.Project.ProjectsManager;
-import Core2D.Shader.Shader;
 import Core2D.Utils.ExceptionsUtils;
+import Core2D.Utils.FileUtils;
+import Core2D.Utils.Utils;
 
-import java.io.Console;
 import java.io.File;
+import java.io.Serializable;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-import java.util.Optional;
 
 /**
  * It is needed for storing all assets and for their proper use.
  */
-public class AssetManager
+public class AssetManager implements Serializable
 {
     private static AssetManager instance;
     /**
@@ -64,12 +66,57 @@ public class AssetManager
         addAsset(new Asset(defaultProgressBarTextureData, defaultProgressBarTexturePath));
     }
 
+    public void save()
+    {
+        if(ProjectsManager.getCurrentProject() != null && Core2D.core2DMode == Core2DMode.IN_ENGINE) {
+            save(ProjectsManager.getCurrentProject().getProjectPath() + File.separator + "AssetManager.txt");
+        }
+    }
+
+    public void save(String path)
+    {
+        if(Core2D.core2DMode == Core2DMode.IN_ENGINE) {
+            String gsonObj = Utils.gson.toJson(this);
+            FileUtils.reCreateFile(path);
+            FileUtils.writeToFile(path, gsonObj, false);
+        }
+    }
+
+    public AssetManager load()
+    {
+        if(ProjectsManager.getCurrentProject() != null && Core2D.core2DMode == Core2DMode.IN_ENGINE) {
+            return load(ProjectsManager.getCurrentProject().getProjectPath() + File.separator + "AssetManager.txt");
+        }
+        return this;
+    }
+
+    public AssetManager load(String path)
+    {
+        if(Core2D.core2DMode == Core2DMode.IN_ENGINE && new File(path).exists()) {
+            String fileText = FileUtils.readAllFile(path);
+            AssetManager assetManager = Utils.gson.fromJson(fileText, AssetManager.class);
+            load(assetManager);
+        }
+        return this;
+    }
+
+    public AssetManager load(AssetManager assetManager)
+    {
+        for(Asset asset : assetManager.assets) {
+            Asset loadedAsset = getAsset(asset);
+            if(loadedAsset != null) {
+                loadedAsset.getAssetObject().setNotTransientFields(asset.getAssetObject());
+            }
+        }
+        return this;
+    }
+
     /**
      * Adds a new asset.
      * If an asset with the same name already exists, an error is output to the log,
      * in another case, it adds a new asset to the list of all assets.
      */
-    public void addAsset(Asset asset)
+    private void addAsset(Asset asset)
     {
         for(Asset a : assets) {
             if (a.path.equals(asset.path)) {
@@ -99,32 +146,72 @@ public class AssetManager
         return getAssetObject(path, Texture2DData.class);
     }
 
-    public AudioInfo getAudioInfo(String path)
+    public AudioData getAudioData(String path)
     {
-        return getAssetObject(path, AudioInfo.class);
+        return getAssetObject(path, AudioData.class);
     }
 
     /**
      * @param path Name of asset.
      * @return Null if the asset is not found and asset if the asset is found.
      */
-    public Asset getAsset(String path)
+    public Asset getAsset(String path, Class<? extends Data> assetObjectClass)
     {
-        for(Asset asset : assets) {
-            if(asset.path.equals(path)) {
-                return asset;
+        Asset asset = null;
+        for(Asset a : assets) {
+            if(a.path.equals(path)) {
+                asset = a;
             }
         }
 
-        return null;
+        if(asset == null) {
+            getAssetObject(path, assetObjectClass);
+            asset = getAsset(path);
+        }
+
+        return asset;
     }
 
-    public <T> T getAssetObject(String path, Class<T> assetObjectClass)
+    public Asset getAsset(String path)
+    {
+        Asset asset = null;
+        for(Asset a : assets) {
+            if(a.path.equals(path)) {
+                asset = a;
+            }
+        }
+
+        if(asset == null) {
+            getAssetObject(path, Data.class);
+            asset = getAsset(path);
+        }
+
+        return asset;
+    }
+
+    public Asset getAsset(Asset asset)
+    {
+        Asset returnAsset = null;
+        for(Asset a : assets) {
+            if(a.path.equals(asset.path)) {
+                returnAsset = a;
+            }
+        }
+
+        if(returnAsset == null) {
+            getAssetObject(asset.path, asset.getAssetObject().getClass());
+            returnAsset = getAsset(asset.path);
+        }
+
+        return returnAsset;
+    }
+
+    public <T extends Data> T getAssetObject(String path, Class<T> assetObjectClass)
     {
         T assetObj = null;
         for(Asset asset : assets) {
-            if(asset.path.equals(path) && asset.assetObject.getClass().isAssignableFrom(assetObjectClass)) {
-                assetObj = assetObjectClass.cast(asset.assetObject);
+            if(asset.path.equals(path) && asset.getAssetObject().getClass().isAssignableFrom(assetObjectClass)) {
+                assetObj = assetObjectClass.cast(asset.getAssetObject());
             }
         }
 
@@ -135,8 +222,11 @@ public class AssetManager
                     Object objToCast = null;
                     if (assetObjectClass.getSuperclass().isAssignableFrom(Data.class)) {
                         try {
-                            objToCast = ((Data) assetObjectClass.newInstance()).load(fullPath);
-                        } catch (InstantiationException | IllegalAccessException e) {
+                            objToCast = assetObjectClass.getConstructor().newInstance().load(fullPath);
+                        } catch (InstantiationException |
+                                 IllegalAccessException |
+                                 InvocationTargetException |
+                                 NoSuchMethodException e) {
                             Log.CurrentSession.println(ExceptionsUtils.toString(e), Log.MessageType.ERROR);
                         }
                     }
@@ -148,7 +238,14 @@ public class AssetManager
             } else {
                 Object objToCast = null;
                 if (assetObjectClass.getSuperclass().isAssignableFrom(Data.class)) {
-                            objToCast = ((Data) assetObjectClass.cast(new Data())).load(Core2D.class.getResourceAsStream(path));
+                    try {
+                        objToCast = assetObjectClass.getConstructor().newInstance().load(Core2D.class.getResourceAsStream(path));
+                    } catch (InstantiationException |
+                             IllegalAccessException |
+                             InvocationTargetException |
+                             NoSuchMethodException e) {
+                        Log.CurrentSession.println(ExceptionsUtils.toString(e), Log.MessageType.ERROR);
+                    }
                 }
 
                 if(objToCast != null) {
@@ -157,12 +254,14 @@ public class AssetManager
             }
 
             assets.add(new Asset(assetObj, path));
-            System.out.println("added new asset! data type: " + assetObj.getClass().getSimpleName() + ", path: " + path);
+            System.out.println("added new asset! data type: " + assetObj.getClass().getSimpleName() +
+                    ", path: " + path + ", asset class: " + assetObjectClass.getName());
         }
-        System.out.println("found asset! data type: " + assetObj.getClass().getSimpleName() + ", path: " + path);
 
         return assetObj;
     }
+
+    public List<Asset> getAssets() { return assets; }
 
     public static AssetManager getInstance()
     {
